fix- horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -42,10 +42,25 @@ body {
   transform: scale(1.3, 1.3);
 }
 
-.react-horizontal-scrolling-menu--wrapper {
+/* .react-horizontal-scrolling-menu--wrapper {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+} */
+
+.horizontal-container{
+  background-color: rgb(245, 245, 245);
+  overflow: auto;
+  white-space: nowrap;
+
+}
+
+.horizontal-bar {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
 }
 
 .detail-image {
@@ -113,9 +128,9 @@ body {
   }
 
 
-  .react-horizontal-scrolling-menu--scroll-container {
+  /* .react-horizontal-scrolling-menu--scroll-container {
     width: 500px;
-  }
+  } */
 
   .left-arrow,
   .right-arrow {
